# kite-questdb-ml

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: settings.py
docker/grafana/provisioning/dashboards/: provider.yml
docker/grafana/provisioning/datasources/: questdb.yml
features/: __init__.py  engineer.py
ingestion/: __init__.py  instrument_manager.py  kite_auth.py  kite_ws.py
ml/: __init__.py
ml/inference/: engine.py
ml/models/: lstm_model.py  xgboost_model.py
ml/training/: trainer.py
scripts/: init_db.py
storage/: __init__.py  questdb_writer.py  schema.sql
tests/: conftest.py
tests/unit/: test_features.py  test_xgboost_model.py
