[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kite-questdb-ml"
version = "0.1.0"
description = "Zerodha Kite live data pipeline with QuestDB and ML predictions"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "ingestion*", "storage*", "features*", "ml*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
